# Argent

./: CMakeLists.txt  flake.nix  shell.nix  xmake.lua
.cache/clangd/index/: Instance.cpp.480773D240104D78.idx  Instance.h.23E436BA9ABCD4FE.idx  InstanceGL.cpp.ACC3E18F883DFDA8.idx  InstanceGL.h.C1B1A3F22FCCF563.idx  PhysicalDevice.h.14715E261F1BC140.idx  PhysicalDeviceGL.h.22A971B766E86949.idx  StdInc.h.2A6F58E56BA57D16.idx  glad.c.A9E82593D2633EBC.idx  glad.h.A8057E7BC1F9C4FA.idx  khrplatform.h.83846FD808EE7068.idx
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Instance.h  PhysicalDevice.h  StdInc.h  System.h  Window.h  argent_stdint.h  engine.h  graphics.h  graphics_func.h  handle.h  main.c  result.c  result.h
src/GL/: InstanceGL.cpp  InstanceGL.h  PhysicalDeviceGL.cpp  PhysicalDeviceGL.h
src/System/: SystemDefault.h  SystemImpl.h  SystemLinux.h
src/container/: array.h
src/graphics/: instance.h  physical_device.h
src/utility/: handle.h  unique.h
